<resources>
    <string name="app_name">SKUMSchool</string>
    <string name="app_title">SKUM School</string>
    <string name="title_activity_adminHome">SKUM School Admin</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_student_detail">Profile</string>
    <string name="title_activity_attendence">Attendence</string>
    <string name="title_activity_notice_board">Notice Board</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_progress_report">Progress Report</string>
    <string name="title_activity_calender">Activity</string>
    <string name="title_activity_evaluation">Evaluation</string>
    <string name="title_activity_education">Education</string>
    <string name="title_activity_environment">Environment</string>
    <string name="title_activity_emotional__evaluation">Emotional Evaluation</string>
    <string name="title_activity_add_student">Student</string>
    <string name="title_activity_admin_attendence">View Student</string>
    <string name="title_activity_admin_notice_board">Notice Board</string>
    <string name="title_activity_admin_event">Activity</string>
    <string name="title_activity_attendence_standard">Search Standard</string>
    <string name="title_activity_search_std">Search Standard</string>
    <string name="title_activity_search_stud">Search Student</string>
    <string name="title_activity_search_student">Search Student</string>
    <string name="title_activity_view_student">View Student</string>
    <string name="title_activity_add_user">Add User</string>
    <string name="title_activity_edit_student">Edit Student</string>
    <string name="title_activity_admin_role">Role Admin</string>

    <!--Login Activity Page-->
    <string name="txt_hint_adminname">Enter Your Name</string>
    <string name="txt_hint_username">Enter Your UserName</string>
    <string name="txt_hint_password">Enter Your Password</string>
    <string name="txt_english">English</string>
    <string name="txt_hindi">Hindi</string>
    <string name="txt_gujarati">Gujarati</string>
    <string name="btn_login">Login</string>
    <string name="txt_sl">Select Language</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="err_msg_uname">Enter valid Username.</string>
    <string name="err_msg_pass">Enter valid Password.</string>

    <!--Forgot Password Activity Page-->
    <string name="txt_hint_email">Enter Your Email Id</string>
    <string name="err_msg_email">Enter valid Email Id.</string>
    <string name="btn_submit">Save</string>

    <!--Change Password Activity Page-->
    <string name="txt_hint_oldPass">Enter Your Old Password</string>
    <string name="err_msg_oldPass">Enter valid Old Password.</string>
    <string name="txt_hint_newPass">Enter Your New Password</string>
    <string name="err_msg_newPass">Enter valid New Password.</string>

    <!--Navigation Deawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ACName">Welcome</string>

    <!--Profile Page-->
    <string name="txt_class">Class</string>
    <string name="txt_rollno">Roll No</string>
    <string name="txt_medium">Medium</string>
    <string name="txt_bod">Date of Birth</string>
    <string name="txt_addmissionDate">Addmission Date</string>
    <string name="txt_fathername">Father`s Name</string>
    <string name="txt_mothername">Mother`s Name</string>
    <string name="txt_occupation">Occupation</string>
    <string name="txt_cast">Cast</string>
    <string name="txt_mobile">Mobile</string>
    <string name="txt_emailId">Email Id</string>
    <string name="txt_GRNo">G. R. No</string>
    <string name="txt_VanNo">Van. No</string>

    <!--Add Student Page-->
    <string name="txt_hint_stdname">Enter Student Name</string>
    <string name="txt_hint_grno">Enter GR No</string>
    <string name="txt_hint_vanno">Enter Van No</string>
    <string name="txt_hint_rno">Enter Roll No</string>
    <string name="txt_hint_dob">Enter Birth Date</string>
    <string name="txt_hint_addmissiondate">Enter Admission Date</string>
    <string name="txt_hint_addr">Enter Address</string>
    <string name="txt_hint_pcode">Enter Pin Code</string>
    <string name="txt_hint_rphone">Enter Residential Phone No </string>
    <string name="txt_hint_ophone">Enter Office Phone No </string>
    <string name="txt_hint_fname">Enter Father Name </string>
    <string name="txt_hint_occup">Enter Occupation </string>
    <string name="txt_hint_mono">Enter Mobile No </string>
    <string name="txt_hint_mname">Enter Mother Name </string>
    <string name="err_msg_stdname">Enter Valid Student Name </string>
    <string name="err_msg_rno">Enter Valid Roll No </string>
    <string name="err_msg_address">Enter Valid Address </string>
    <string name="err_msg_pincode">Enter Valid Pincode </string>
    <string name="err_msg_validmono">Enter 10 digit Mobile No </string>
    <string name="err_msg_validpno">Enter 6 digit Pincode No </string>
    <string name="err_msg_dob">Enter Valid Birth Date </string>
    <string name="err_msg_admissiondate">Enter Valid Addmission Date </string>
    <string name="err_msg_grno">Enter Valid GRNo </string>
    <string name="err_msg_vanno">Enter Valid VanNo </string>
    <string name="err_msg_fname">Enter Valid Father Name </string>
    <string name="err_msg_foccup">Enter Valid Father Occupation </string>
    <string name="err_msg_mname">Enter Valid Mother Name </string>
    <string name="err_msg_moccup">Enter Valid Mother Ocupation</string>

    <!--Admin Home Page-->
    <string name="txt_admin_User">User</string>
    <string name="txt_admin_role">Role</string>
    <string name="txt_admin_student">Student</string>
    <string name="txt_admin_attendence">Attendence</string>
    <string name="txt_admin_progressReport">Progress \n Report</string>
    <string name="txt_admin_evaluation">Evaluation</string>
    <string name="txt_admin_noticeBoard">Notice Board</string>
    <string name="txt_admin_education">Education</string>
    <string name="txt_admin_environment">Environment</string>
    <string name="txt_admin_emoEva">Emotional \n Evaluation</string>
    <string name="txt_admin_activity">Activity</string>
    <string name="txt_admin_messages">Messages</string>

    <!--Admin Add Notice Board-->
    <string name="txt_hint_Admin_nbTitle">Enter Title</string>
    <string name="txt_hint_Admin_nbDescription">Enter Description</string>
    <string name="err_msg_empty">Empty Field Not Required.</string>

    <!--Admin Add Activity-->
    <string name="txt_hint_Admin_evDate">Enter Date</string>

    <!--Edit Student Activity-->
    <string name="btn_ed">Edit</string>
    <string name="title_activity_admin_progress_report">AdminProgressReportActivity</string>
    <string name="title_activity_admin_evaluation">AdminEvaluationActivity</string>
    <string name="title_activity_admin_education">AdminEducationActivity</string>
    <string name="title_activity_admin_environment">AdminEnvironmentActivity</string>
    <string name="title_activity_admin_emotional__evaluation">AdminEmotional_EvaluationActivity
    </string>
    <string name="title_activity_admin_messages">AdminMessagesActivity</string>

</resources>
