<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.intelliworkz.skumschool.Admin.AdminStudent.EditStudentActivity"
    tools:showIn="@layout/app_bar_edit_student">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edtxtAddStdName"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_hint_stdname"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">
            <Spinner
                android:id="@+id/edspnStd"
                style="@style/hint_editText"
                android:textColor="#111"
                android:background="@android:drawable/btn_dropdown"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:spinnerMode="dialog"
                android:popupTheme="@android:style/ThemeOverlay.Material.Light"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_RNo"
                style="@style/hint_editText">

                <EditText
                    android:id="@+id/edtxtAddRNo"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_hint_rno"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">
                <Spinner
                    android:id="@+id/edspnMedium"
                    style="@style/hint_editText"
                    android:textColor="#111"
                    android:background="@android:drawable/btn_dropdown"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:spinnerMode="dialog"
                    android:popupTheme="@android:style/ThemeOverlay.Material.Light"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_Address"
                style="@style/hint_editText">

                <EditText
                    android:id="@+id/edtxtAddAddress"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_hint_addr"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_PCode"
                style="@style/hint_editText">

                <EditText
                    android:id="@+id/edtxtAddPcode"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_hint_pcode"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_DOB"
                style="@style/hint_editText">

                <EditText
                    android:id="@+id/edtxtAddDOB"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:editable="false"
                    android:ems="10"
                    android:hint="@string/txt_hint_dob" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_AddmissionDate"
                style="@style/hint_editText">

                <EditText
                    android:id="@+id/edtxtAddAddmissionDate"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:editable="false"
                    android:ems="10"
                    android:hint="@string/txt_hint_addmissiondate" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_GRNo"
                style="@style/hint_editText">

                <EditText
                    android:id="@+id/edtxtAddGRNo"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_hint_grno"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_VanNo"
                style="@style/hint_editText">

                <EditText
                    android:id="@+id/edtxtAddVanNo"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_hint_vanno"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_RPhone"
                style="@style/hint_editText">

                <EditText
                    android:id="@+id/edtxtAddRPhone"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_hint_rphone"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_OPhone"
                style="@style/hint_editText">

                <EditText
                    android:id="@+id/edtxtAddOPhone"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_hint_ophone"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_Fathername"
                style="@style/hint_editText">

                <EditText
                    android:id="@+id/edtxtAddFathername"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_hint_fname"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_FOccup"
                style="@style/hint_editText">

                <EditText
                    android:id="@+id/edtxtAddFOccup"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_hint_occup"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_FMoNo"
                style="@style/hint_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtxtAddFMono"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_hint_mono"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_Femail"
                style="@style/hint_editText">

                <EditText
                    android:id="@+id/edtxtAddFemail"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_hint_email"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_Mothername"
                style="@style/hint_editText">

                <EditText
                    android:id="@+id/edtxtAddMothername"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_hint_mname"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_MOccup"
                style="@style/hint_editText">

                <EditText
                    android:id="@+id/edtxtAddMOccup"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_hint_occup"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_MMoNo"
                style="@style/hint_editText">

                <EditText
                    android:id="@+id/edtxtAddMMono"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_hint_mono"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edinput_layout_MEmail"
                style="@style/hint_editText">

                <EditText
                    android:id="@+id/edtxtAddMEmail"
                    style="@style/hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txt_hint_email"
                    android:inputType="textPersonName"
                    app:hintAnimationEnabled="false" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btned"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:text="@string/btn_ed"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
